add batch handlers
