# Sources/LocalKaApiInterface/Models/Body.swift
@@ -1,0 +1,23 @@
+//
+// Body.swift
+//
+// Generated by vapor-server-codegen
+// https://github.com/thecheatah/SwiftVapor-swagger-codegen
+// Template Input: /Models.Body
+
+import Vapor
+
+
+public final class Body: Content {
+
+    public var channels: [UUID]?
+
+    public init(channels: [UUID]?) { 
+        self.channels = channels
+    }
+
+    public enum CodingKeys: String, CodingKey { 
+        case channels = "channels"
+    }
+
+}
