# Sources/LocalKaApiInterface/Models/Body1.swift
@@ -1,0 +1,23 @@
+//
+// Body1.swift
+//
+// Generated by vapor-server-codegen
+// https://github.com/thecheatah/SwiftVapor-swagger-codegen
+// Template Input: /Models.Body1
+
+import Vapor
+
+
+public final class Body1: Content {
+
+    public var channels: [UUID]
+
+    public init(channels: [UUID]) { 
+        self.channels = channels
+    }
+
+    public enum CodingKeys: String, CodingKey { 
+        case channels = "channels"
+    }
+
+}
